// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib getEc2Info run with default options should return expected values 1`] = `
{
  "a1.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "a1.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "a1.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "a1.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 2,
    "vCpu": 1,
  },
  "a1.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "a1.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "c1.medium": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 1.7,
    "vCpu": 2,
  },
  "c1.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 7,
    "vCpu": 8,
  },
  "c3.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15,
    "vCpu": 8,
  },
  "c3.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30,
    "vCpu": 16,
  },
  "c3.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 60,
    "vCpu": 32,
  },
  "c3.large": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 3.75,
    "vCpu": 2,
  },
  "c3.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 7.5,
    "vCpu": 4,
  },
  "c4.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15,
    "vCpu": 8,
  },
  "c4.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30,
    "vCpu": 16,
  },
  "c4.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 60,
    "vCpu": 36,
  },
  "c4.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 3.75,
    "vCpu": 2,
  },
  "c4.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 7.5,
    "vCpu": 4,
  },
  "c5.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 48,
  },
  "c5.18xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 144,
    "vCpu": 72,
  },
  "c5.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "c5.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "c5.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "c5.9xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 72,
    "vCpu": 36,
  },
  "c5.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "c5.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "c5.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "c5a.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 48,
  },
  "c5a.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 64,
  },
  "c5a.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "c5a.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "c5a.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "c5a.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 32,
  },
  "c5a.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "c5a.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "c5ad.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 48,
  },
  "c5ad.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 64,
  },
  "c5ad.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "c5ad.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "c5ad.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "c5ad.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 32,
  },
  "c5ad.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "c5ad.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "c5d.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 48,
  },
  "c5d.18xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 144,
    "vCpu": 72,
  },
  "c5d.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "c5d.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "c5d.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "c5d.9xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 72,
    "vCpu": 36,
  },
  "c5d.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "c5d.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "c5d.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "c5n.18xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 72,
  },
  "c5n.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 21,
    "vCpu": 8,
  },
  "c5n.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 42,
    "vCpu": 16,
  },
  "c5n.9xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 36,
  },
  "c5n.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 5.25,
    "vCpu": 2,
  },
  "c5n.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 72,
  },
  "c5n.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 10.5,
    "vCpu": 4,
  },
  "c6g.12xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 96,
    "vCpu": 48,
  },
  "c6g.16xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 64,
  },
  "c6g.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "c6g.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "c6g.8xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 64,
    "vCpu": 32,
  },
  "c6g.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "c6g.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 2,
    "vCpu": 1,
  },
  "c6g.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 64,
  },
  "c6g.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "c6gd.12xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 96,
    "vCpu": 48,
  },
  "c6gd.16xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 64,
  },
  "c6gd.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "c6gd.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 16,
  },
  "c6gd.8xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 64,
    "vCpu": 32,
  },
  "c6gd.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "c6gd.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 2,
    "vCpu": 1,
  },
  "c6gd.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 64,
  },
  "c6gd.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "cc2.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 60.5,
    "vCpu": 32,
  },
  "d2.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 8,
  },
  "d2.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 16,
  },
  "d2.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 36,
  },
  "d2.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30.5,
    "vCpu": 4,
  },
  "f1.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 976,
    "vCpu": 64,
  },
  "f1.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 8,
  },
  "f1.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 16,
  },
  "g2.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15,
    "vCpu": 8,
  },
  "g2.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 60,
    "vCpu": 32,
  },
  "g3.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 488,
    "vCpu": 64,
  },
  "g3.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 16,
  },
  "g3.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 32,
  },
  "g3s.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30.5,
    "vCpu": 4,
  },
  "g4dn.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "g4dn.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "g4dn.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "g4dn.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "g4dn.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "g4dn.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "g4dn.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "h1.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "h1.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "h1.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "h1.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "i2.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 8,
  },
  "i2.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 16,
  },
  "i2.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 32,
  },
  "i2.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30.5,
    "vCpu": 4,
  },
  "i3.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 488,
    "vCpu": 64,
  },
  "i3.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 8,
  },
  "i3.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 16,
  },
  "i3.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 32,
  },
  "i3.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15.25,
    "vCpu": 2,
  },
  "i3.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 72,
  },
  "i3.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30.5,
    "vCpu": 4,
  },
  "i3en.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "i3en.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "i3en.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "i3en.3xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 12,
  },
  "i3en.6xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 24,
  },
  "i3en.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "i3en.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "i3en.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "inf1.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 96,
  },
  "inf1.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 8,
  },
  "inf1.6xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 48,
    "vCpu": 24,
  },
  "inf1.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 4,
  },
  "m1.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 7.5,
    "vCpu": 2,
  },
  "m1.medium": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 3.7,
    "vCpu": 1,
  },
  "m1.small": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 1.7,
    "vCpu": 1,
  },
  "m1.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15,
    "vCpu": 4,
  },
  "m2.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 34.2,
    "vCpu": 4,
  },
  "m2.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 68.4,
    "vCpu": 8,
  },
  "m2.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 17.1,
    "vCpu": 2,
  },
  "m3.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30,
    "vCpu": 8,
  },
  "m3.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 7.5,
    "vCpu": 2,
  },
  "m3.medium": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 3.75,
    "vCpu": 1,
  },
  "m3.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15,
    "vCpu": 4,
  },
  "m4.10xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 160,
    "vCpu": 40,
  },
  "m4.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m4.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m4.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m4.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m4.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m5.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m5.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m5.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m5.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m5.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m5.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m5.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m5a.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m5a.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m5a.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5a.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m5a.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m5a.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m5a.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m5a.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m5ad.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m5ad.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m5ad.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5ad.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m5ad.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m5ad.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m5ad.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m5ad.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m5d.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m5d.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m5d.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5d.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m5d.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m5d.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m5d.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m5d.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5d.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m5dn.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m5dn.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m5dn.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5dn.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m5dn.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m5dn.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m5dn.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m5dn.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m5n.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m5n.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m5n.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 96,
  },
  "m5n.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m5n.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m5n.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m5n.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m5n.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m6g.12xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m6g.16xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m6g.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m6g.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m6g.8xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m6g.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m6g.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 4,
    "vCpu": 1,
  },
  "m6g.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m6g.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "m6gd.12xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 192,
    "vCpu": 48,
  },
  "m6gd.16xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m6gd.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "m6gd.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 64,
    "vCpu": 16,
  },
  "m6gd.8xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 32,
  },
  "m6gd.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "m6gd.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 4,
    "vCpu": 1,
  },
  "m6gd.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 256,
    "vCpu": 64,
  },
  "m6gd.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "p2.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 732,
    "vCpu": 64,
  },
  "p2.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 488,
    "vCpu": 32,
  },
  "p2.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 4,
  },
  "p3.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 488,
    "vCpu": 64,
  },
  "p3.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 8,
  },
  "p3.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 32,
  },
  "p3dn.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "p4d.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 1152,
    "vCpu": 96,
  },
  "r3.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 8,
  },
  "r3.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 16,
  },
  "r3.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 32,
  },
  "r3.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15,
    "vCpu": 2,
  },
  "r3.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30.5,
    "vCpu": 4,
  },
  "r4.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 488,
    "vCpu": 64,
  },
  "r4.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 61,
    "vCpu": 8,
  },
  "r4.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 16,
  },
  "r4.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 32,
  },
  "r4.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 15.25,
    "vCpu": 2,
  },
  "r4.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 30.5,
    "vCpu": 4,
  },
  "r5.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r5.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r5.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r5.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r5.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r5.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r5.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r5a.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r5a.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r5a.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5a.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r5a.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r5a.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r5a.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r5a.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r5ad.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r5ad.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r5ad.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5ad.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r5ad.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r5ad.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r5ad.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r5ad.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r5d.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r5d.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r5d.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5d.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r5d.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r5d.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r5d.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r5d.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5d.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r5dn.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r5dn.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r5dn.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5dn.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r5dn.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r5dn.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r5dn.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r5dn.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r5n.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r5n.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r5n.24xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 768,
    "vCpu": 96,
  },
  "r5n.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r5n.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r5n.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r5n.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r5n.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r6g.12xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r6g.16xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r6g.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r6g.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r6g.8xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r6g.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r6g.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 1,
  },
  "r6g.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r6g.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "r6gd.12xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "r6gd.16xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r6gd.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "r6gd.4xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 128,
    "vCpu": 16,
  },
  "r6gd.8xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 256,
    "vCpu": 32,
  },
  "r6gd.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "r6gd.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 1,
  },
  "r6gd.metal": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 512,
    "vCpu": 64,
  },
  "r6gd.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
  "t1.micro": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 0.613,
    "vCpu": 1,
  },
  "t2.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "t2.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "t2.medium": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "t2.micro": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 1,
    "vCpu": 1,
  },
  "t2.nano": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 0.5,
    "vCpu": 1,
  },
  "t2.small": {
    "architectures": {
      "Item": [
        "i386",
        "x86_64",
      ],
    },
    "memoryGiB": 2,
    "vCpu": 1,
  },
  "t2.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "t3.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "t3.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "t3.medium": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "t3.micro": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 1,
    "vCpu": 2,
  },
  "t3.nano": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 0.5,
    "vCpu": 2,
  },
  "t3.small": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 2,
    "vCpu": 2,
  },
  "t3.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "t3a.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "t3a.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "t3a.medium": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "t3a.micro": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 1,
    "vCpu": 2,
  },
  "t3a.nano": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 0.5,
    "vCpu": 2,
  },
  "t3a.small": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 2,
    "vCpu": 2,
  },
  "t3a.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "t4g.2xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 32,
    "vCpu": 8,
  },
  "t4g.large": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 8,
    "vCpu": 2,
  },
  "t4g.medium": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 4,
    "vCpu": 2,
  },
  "t4g.micro": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 1,
    "vCpu": 2,
  },
  "t4g.nano": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 0.5,
    "vCpu": 2,
  },
  "t4g.small": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 2,
    "vCpu": 2,
  },
  "t4g.xlarge": {
    "architectures": {
      "Item": "arm64",
    },
    "memoryGiB": 16,
    "vCpu": 4,
  },
  "x1.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 976,
    "vCpu": 64,
  },
  "x1.32xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 1952,
    "vCpu": 128,
  },
  "x1e.16xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 1952,
    "vCpu": 64,
  },
  "x1e.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 244,
    "vCpu": 8,
  },
  "x1e.32xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 3904,
    "vCpu": 128,
  },
  "x1e.4xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 488,
    "vCpu": 16,
  },
  "x1e.8xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 976,
    "vCpu": 32,
  },
  "x1e.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 122,
    "vCpu": 4,
  },
  "z1d.12xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "z1d.2xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 64,
    "vCpu": 8,
  },
  "z1d.3xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 96,
    "vCpu": 12,
  },
  "z1d.6xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 192,
    "vCpu": 24,
  },
  "z1d.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
  "z1d.metal": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 384,
    "vCpu": 48,
  },
  "z1d.xlarge": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 32,
    "vCpu": 4,
  },
}
`;

exports[`lib getEc2Info run with targeted instance type should return expected values 1`] = `
{
  "dummy.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
}
`;

exports[`lib getEc2Info should handle RequestLimitExceeded error should return expected values 1`] = `
{
  "dummy.large": {
    "architectures": {
      "Item": "x86_64",
    },
    "memoryGiB": 16,
    "vCpu": 2,
  },
}
`;

exports[`lib getGlobalSpotPrices run with default options should return expected values 1`] = `
[
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2a",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0015,
    "timestamp": 2019-10-15T22:41:58.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2c",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0015,
    "timestamp": 2019-10-15T07:13:00.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2d",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0015,
    "timestamp": 2019-10-15T23:09:28.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-north-1a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:45:20.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-north-1b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:45:20.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-north-1c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:45:20.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1f",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:01:55.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:01:55.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:01:55.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2d",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "ca-central-1a",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T15:04:27.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "ca-central-1b",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T15:04:27.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-central-1a",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-16T02:51:49.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-central-1b",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-16T02:51:49.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-1b",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T18:39:03.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-1c",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T08:01:03.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-2a",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:05:27.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-2b",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:05:27.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-2c",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:05:27.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-3a",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T04:02:17.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-3b",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T04:02:17.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-west-3c",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T04:02:17.000Z,
    "vCpu": 2,
  },
]
`;

exports[`lib getGlobalSpotPrices should fetch ec2 instance type info dynamically if not found from constants should return expected values 1`] = `
[
  {
    "architectures": undefined,
    "availabilityZone": "us-west-2a",
    "instanceType": "t3a.nano",
    "memoryGiB": 1,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0015,
    "timestamp": 2019-10-15T22:41:58.000Z,
    "vCpu": 4,
  },
  {
    "architectures": undefined,
    "availabilityZone": "us-west-2c",
    "instanceType": "t3a.nano",
    "memoryGiB": 1,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0015,
    "timestamp": 2019-10-15T07:13:00.000Z,
    "vCpu": 4,
  },
  {
    "architectures": undefined,
    "availabilityZone": "us-west-2d",
    "instanceType": "t3a.nano",
    "memoryGiB": 1,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0015,
    "timestamp": 2019-10-15T23:09:28.000Z,
    "vCpu": 4,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-north-1a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:45:20.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-north-1b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:45:20.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "eu-north-1c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:45:20.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1f",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:01:55.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:01:55.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T12:01:55.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-west-2d",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:08:19.000Z,
    "vCpu": 2,
  },
  {
    "architectures": undefined,
    "availabilityZone": "ca-central-1a",
    "instanceType": "t3a.nano",
    "memoryGiB": 1,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T15:04:27.000Z,
    "vCpu": 4,
  },
  {
    "architectures": undefined,
    "availabilityZone": "ca-central-1b",
    "instanceType": "t3a.nano",
    "memoryGiB": 1,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T15:04:27.000Z,
    "vCpu": 4,
  },
]
`;

exports[`lib getGlobalSpotPrices should filter architecture should return expected values 1`] = `
[
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-2a",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0049,
    "timestamp": 2019-10-15T03:32:13.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-2b",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0049,
    "timestamp": 2019-10-15T03:32:13.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-south-1b",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0075,
    "timestamp": 2019-10-15T21:14:19.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-south-1c",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0075,
    "timestamp": 2019-10-15T21:14:19.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-west-2a",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0083,
    "timestamp": 2019-10-15T21:08:17.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0084,
    "timestamp": 2019-10-15T14:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0084,
    "timestamp": 2019-10-15T14:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0084,
    "timestamp": 2019-10-15T14:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-northeast-1a",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0086,
    "timestamp": 2019-10-15T12:42:42.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-northeast-1d",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0086,
    "timestamp": 2019-10-15T12:42:42.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "eu-central-1a",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0086,
    "timestamp": 2019-10-15T17:52:24.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "eu-central-1b",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0086,
    "timestamp": 2019-10-15T17:52:24.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-southeast-2a",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0089,
    "timestamp": 2019-10-15T22:09:27.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-southeast-2c",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0089,
    "timestamp": 2019-10-15T22:09:27.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "eu-west-1b",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0089,
    "timestamp": 2019-10-15T15:42:45.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "eu-west-1c",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0089,
    "timestamp": 2019-10-15T15:42:45.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-2a",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0098,
    "timestamp": 2019-10-15T15:03:37.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-2b",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0098,
    "timestamp": 2019-10-15T15:03:37.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-west-2c",
    "instanceType": "a1.medium",
    "memoryGiB": 2,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0148,
    "timestamp": 2019-10-16T00:22:14.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-south-1b",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.015,
    "timestamp": 2019-10-15T04:00:06.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-south-1c",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.015,
    "timestamp": 2019-10-15T04:00:06.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-west-2a",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0167,
    "timestamp": 2019-10-15T17:27:17.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-west-2c",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0167,
    "timestamp": 2019-10-15T17:27:17.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0168,
    "timestamp": 2019-10-16T02:43:12.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0168,
    "timestamp": 2019-10-16T02:43:12.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0168,
    "timestamp": 2019-10-16T02:43:12.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-northeast-1a",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0172,
    "timestamp": 2019-10-15T21:08:47.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "ap-northeast-1d",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0172,
    "timestamp": 2019-10-15T21:08:47.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "eu-central-1a",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0172,
    "timestamp": 2019-10-16T01:52:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "arm64",
    ],
    "availabilityZone": "eu-central-1b",
    "instanceType": "a1.large",
    "memoryGiB": 4,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0172,
    "timestamp": 2019-10-16T01:52:43.000Z,
    "vCpu": 2,
  },
]
`;

exports[`lib getGlobalSpotPrices should filter by minVCPU & minMemoryGiB should return expected values 1`] = `
[
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2a",
    "instanceType": "r3.xlarge",
    "memoryGiB": 30.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0379,
    "timestamp": 2019-10-15T21:09:49.000Z,
    "vCpu": 4,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2b",
    "instanceType": "r3.xlarge",
    "memoryGiB": 30.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0379,
    "timestamp": 2019-10-15T21:09:49.000Z,
    "vCpu": 4,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2c",
    "instanceType": "r3.xlarge",
    "memoryGiB": 30.5,
    "platform": "Linux/UNIX",
    "spotPrice": 0.0379,
    "timestamp": 2019-10-15T21:09:49.000Z,
    "vCpu": 4,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2b",
    "instanceType": "m4.xlarge",
    "memoryGiB": 16,
    "platform": "Linux/UNIX",
    "spotPrice": 0.038,
    "timestamp": 2019-10-15T19:11:29.000Z,
    "vCpu": 4,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-2c",
    "instanceType": "m4.xlarge",
    "memoryGiB": 16,
    "platform": "Linux/UNIX",
    "spotPrice": 0.038,
    "timestamp": 2019-10-15T19:11:29.000Z,
    "vCpu": 4,
  },
]
`;

exports[`lib getGlobalSpotPrices should handle RequestLimitExceeded error should return expected values 1`] = `
[
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1f",
    "instanceType": "t3.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0016,
    "timestamp": 2019-10-15T17:09:43.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0017,
    "timestamp": 2019-10-15T22:11:29.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0017,
    "timestamp": 2019-10-15T22:11:29.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0018,
    "timestamp": 2019-10-15T22:11:29.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0018,
    "timestamp": 2019-10-15T20:21:10.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1f",
    "instanceType": "t3a.nano",
    "memoryGiB": 0.5,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0018,
    "timestamp": 2019-10-15T22:11:29.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:12.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:13.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:16.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:12.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:13.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1b",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:16.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:12.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:13.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:16.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:12.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:13.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1d",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:16.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1f",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:11:25.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "i386",
      "x86_64",
    ],
    "availabilityZone": "us-east-1f",
    "instanceType": "t1.micro",
    "memoryGiB": 0.613,
    "platform": "Windows (Amazon VPC)",
    "spotPrice": 0.002,
    "timestamp": 2019-10-15T13:12:16.000Z,
    "vCpu": 1,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1a",
    "instanceType": "t3a.micro",
    "memoryGiB": 1,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0028,
    "timestamp": 2019-10-16T00:11:49.000Z,
    "vCpu": 2,
  },
  {
    "architectures": [
      "x86_64",
    ],
    "availabilityZone": "us-east-1c",
    "instanceType": "t3a.micro",
    "memoryGiB": 1,
    "platform": "Linux/UNIX (Amazon VPC)",
    "spotPrice": 0.0028,
    "timestamp": 2019-10-16T00:11:49.000Z,
    "vCpu": 2,
  },
]
`;
